<resources>
    <string name="app_name">AHPAssignment</string>
    <string name="ayurveda_house_private">Ayurveda House Private</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ahp_assignment">AHP Assignment</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="my_cart">My Cart</string>
</resources>