<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#17236B"
        app:cardCornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ayurveda" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rectangle_border"
            android:hint="@string/email"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_border"
            android:hint="@string/password"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#BD4924"
                android:text="@string/sign_in"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="110dp"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="15sp"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="199dp"
        android:layout_height="64dp"
        android:layout_marginTop="100dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/forward_arrow_2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/forward_arrow_2"
        android:layout_width="39dp"
        android:layout_height="56dp"

        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />



</androidx.constraintlayout.widget.ConstraintLayout>